# msc-pm

./: CMakeLists.txt  README.md  barchart.cpp  barchart.h  brushinghandler.cpp  brushinghandler.h  colormap.cpp  colormap.h  colorscale.cpp  colorscale.h  continuouscolorscale.cpp  continuouscolorscale.h  dist.cpp  distortionmeasure.h  distortionobserver.cpp  distortionobserver.h  divergentcolorscale.cpp  divergentcolorscale.h  effectivenessobserver.cpp  effectivenessobserver.h  forceScheme.cpp  forcescheme.cpp  geometry.cpp  geometry.h  glyph.cpp  glyph.h  historygraph.cpp  historygraph.h  interactionhandler.cpp  interactionhandler.h  knn.cpp  lamp.cpp  lineplot.cpp  lineplot.h  main.cpp  main.h  main_view.qml  manipulationhandler.cpp  manipulationhandler.h  mapscalehandler.cpp  (+32 more)
